--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,11 +3,22 @@ spring:
     name: project_generator
   profiles:
     active: local
+  # session 配置
+  session:
+    store-type: redis
+    # session 30 天过期
+    timeout: 2592000
+
+
+
+
 server:
   port: 8123
   servlet:
     context-path: /api
-
+    session: 
+      cookie:
+        max-age: 2592000
 
 # springdoc-openapi
 springdoc:
