--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,4 +59,13 @@ langchain4j:
 #      port: 6379
 #      password:
 #      dimension: 384
-      
+# Pexels 图片搜索配置
+pexels:
+  api-key: xxxx
+  
+cos:
+  client: xxx
+# 阿里云 DashScope 配置
+dashscope:
+  api-key: <Your API Key>
+  image-model: wan2.2-t2i-flash
